# eddz

./: .gitignore  ProjectPilot Docker智能化管理最终方案.md  ProjectPilot_Executor_goal_prompt.txt  ProjectPilot主机AI与SSH远程管理完整方案.md  ProjectPilot后端对接说明.md  ProjectPilot最终产品方案.md  README.md  pyproject.toml  成员B本地检测对接计划.md  智能GitDoctor开发计划.md  智能Git下一阶段开发计划.md  智能Git审计记录开发计划.md  智能Git开发计划.md
.codex/environments/: environment.toml
.github/workflows/: build-windows.yml
ProjectPilot/: .gitignore  ProjectPilot_PPT_AI_Prompt.md  dev-log1.md  dev-log2.md  dev-log3.md  dev-log4.md  frontend-api-final.md  member-b-handoff-current.md  member-b-integration.md
ProjectPilot/backend/: .env.example  config.py  database.py  main.py  schemas.py  seed.py
ProjectPilot/ppt/: ProjectPilot.pptx  ProjectPilot_Report.pptx  ProjectPilot_inventory.json  ProjectPilot_original_extracted_outline.json  ProjectPilot_revised.pptx  ProjectPilot_revised_outline.json  projectpilot_report_outline.json
docs/: PROJECTPILOT_GIT_AI_SCENARIO.md  PROJECTPILOT_INNOVATION_DESIGN.md  PROJECT_STRUCTURE.md  ProjectPilot_三人分工.md  SMART_GIT_MODULE_PLAN.md  SMART_GIT_TECHNICAL_SPEC.md
macos/ProjectPilotAgentNative/: Package.swift
macos/ProjectPilotExecutorNative/: Package.swift
projectpilot/: __init__.py  backend_console.py  cli.py
projectpilot-tauri-app/: .gitignore  ProjectPilot-Start.cmd  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.js
projectpilot-tauri-app/backend/: README.md  database.py  demo_seed.py  main.py  requirements.txt  schemas.py  seed.py
projectpilot-tauri-app/scripts/: build-static.mjs  dev-full.mjs  dev-server.mjs  e2e-local-demo.mjs  release-macos.mjs  run-python.mjs  run-tauri.mjs  write-update-manifest.mjs
projectpilot-tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
projectpilot-tauri-app/src-tauri/src/: main.rs
script/: build_and_run.sh  demo_tui.sh  demo_tui_local.sh  demo_tui_ubuntu.sh  fake_shell_backend.py  package_agent_linux_arm64.sh  package_agent_linux_x86_64.sh  package_executor.sh
tests/: test_agent.py  test_agent_app.py  test_backend_console.py  test_executor.py  test_executor_app.py  test_executor_backend.py  test_executor_cli.py  test_executor_remote.py  test_git_intelligence.py  test_member_b_integration.py  test_native_macos_app.py  test_smart_git.py  test_tauri_git_worktree.py
tui/projectpilot-tui/: Cargo.toml
tui/projectpilot-tui/src/: main.rs
(+135 files in other folders)
