[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectpilot"
version = "0.1.0"
description = "An intelligent Git assistant for understanding repository state and suggesting safe next steps."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ProjectPilot" }
]
dependencies = ["rich>=13.7"]
keywords = ["git", "cli", "developer-tools", "project-management"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
projectpilot = "projectpilot.cli:main"
projectpilot-executor = "projectpilot.executor.cli:main"

[tool.setuptools.packages.find]
include = ["projectpilot*"]
