[package]
name = "projectpilot"
version = "0.1.0"
description = "ProjectPilot desktop app"
authors = ["ProjectPilot Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[patch.crates-io]
tauri-winres = { path = "../vendor/tauri-winres-0.3.6" }
