[package]
name = "projectpilot-tui"
version = "0.1.0"
edition = "2021"
description = "ProjectPilot terminal approval and SSH script execution client"

[dependencies]
crossterm = "0.28"
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["json"] }
